--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,71 @@
-sten      80;
-    listen [::]:80;
-    server_name ${DOCKER_DOMAIN};
+upstream tomcat {
+  server tomcathost:8080 fail_timeout=0;
+}
 
-    location / {
-        rewrite ^ https://$host$request_uri? permanent;
-    }
+server {
+  listen 80 default_server;
+  #listen [::]:80 default_server;
 
-    location ^~ /.well-known {
-        allow all;
-        root  /data/letsencrypt/;
-    }
+  server_name _;
+
+  location / {
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Ssl on; # Optional
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_pass http://tomcat/;
+  }
+
+
+  location ~ /.well-known/acme-challenge {
+    allow all;
+  }
+}
+
+
+
+server {
+  listen [::]:80 default_server;
+
+  server_name DOMAIN; # managed by Certbot
+
+  location / {
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Ssl on; # Optional
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header Connection "";
+    proxy_pass http://tomcat/;
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
+  }
+
+  #rewrite ^/gol/?(.*)$ /gol/gol/$1 break;
+  #rewrite ^/(.*)$ /gol/$1 last;
+  rewrite ^/$ /gol redirect;
+
+  location ~ /.well-known/acme-challenge {
+    allow all;
+  }
+
+  listen 443 ssl; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+  ssl_certificate_key "/etc/letsencrypt/live/example.com/privkey.pem"; # managed by Certbot
+
+}
+
+server {
+  if ($scheme = http) {
+    return 301 https://$server_name$request_uri;
+  }
+
+  listen 80 ;
+  server_name $servername;
+  return 404;
 }
